# AGRITECH-META

./: .gitignore  Dockerfile  README.md  app.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.json
server/: app.py
tasks/: __init__.py  easy.py  hard.py  medium.py
tests/: test_submission_contract.py
